styx-format/src/snapshots/styx_format__cst_format__tests__fmt_039_tag_sequence_attached.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"type @seq()\")"
---
type @seq()
