styx-format/src/snapshots/styx_format__cst_format__tests__fmt_040_tag_sequence_detached.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"type @seq ()\")"
---
type @seq
