styx-format/src/snapshots/styx_format__cst_format__tests__fmt_041_line_comment_before_entry.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"// comment\\nfoo bar\")"
---
// comment
foo bar
