styx-format/src/snapshots/styx_format__cst_format__tests__fmt_042_doc_comment_before_entry.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"/// doc comment\\nfoo bar\")"
---
/// doc comment
foo bar
