styx-format/src/snapshots/styx_format__cst_format__tests__fmt_043_comment_inside_block_object.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"config {\\n  // comment\\n  foo bar\\n}\")"
---
config {
    // comment
    foo bar
}
