styx-format/src/snapshots/styx_format__cst_format__tests__fmt_045_comment_between_entries.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"config {\\n  a 1\\n  // middle\\n  b 2\\n}\")"
---
config {
    a 1
    // middle
    b 2
}
