styx-format/src/snapshots/styx_format__cst_format__tests__fmt_046_comment_at_end_of_object.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"config {\\n  a 1\\n  // trailing\\n}\")"
---
config {
    a 1
    // trailing
}
