styx-format/src/snapshots/styx_format__cst_format__tests__fmt_047_inline_object_with_doc_comment.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"config {/// doc\\na 1, b 2}\")"
---
config {
    /// doc
    a 1
    b 2
}
