styx-format/src/snapshots/styx_format__cst_format__tests__fmt_048_comment_in_sequence.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"items (\\n  // comment\\n  a\\n  b\\n)\")"
---
items (
    // comment
    a
    b
)
