styx-format/src/snapshots/styx_format__cst_format__tests__fmt_049_multiple_comments_grouped.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"config {\\n  // first\\n  // second\\n  a 1\\n}\")"
---
config {
    // first
    // second
    a 1
}
