styx-format/src/snapshots/styx_format__cst_format__tests__fmt_050_comments_with_blank_line_between.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"config {\\n  // group 1\\n\\n  // group 2\\n  a 1\\n}\")"
---
config {
    // group 1

    // group 2
    a 1
}
